@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.dailymotion_com" name="DailyMotion.com" version="2.4.2" provider-name="gujal">
+<addon id="plugin.video.dailymotion_com" name="DailyMotion.com" version="2.4.3" provider-name="gujal">
     <requires>
         <!-- <import addon="xbmc.python" version="2.24.0"/> -->
         <import addon="script.module.six" version="0.0.1"/>
@@ -24,9 +24,9 @@
         <disclaimer lang="fr_FR">Certaines parties de cet addon peuvent ne pas être légales dans votre pays de résidence - s’il vous plaît vérifier avec vos lois locales avant d’installer.</disclaimer>
         <disclaimer lang="he_IL">ייתכן שחלק מהתוספות האלו אינן חוקיות בארץ המגורים שלך - אנא בדוק את החוקים המקומיים שלך לפני ההתקנה.</disclaimer>
         <news>
-[B]Version 2.4.2 - 15 July 2019[/B] 
- - Rewrite with six library instead of future
- - Fix playback issues
+[B]Version 2.4.3 - 02 Nov 2021[/B] 
+ - Fix search function prompting for keyboard input after playback
+ - Fix live playback issues
         </news>
         <website>https://www.dailymotion.com</website>
         <source>https://github.com/Gujal00/plugin.video.dailymotion_com</source>
