@@ -1,3 +1,7 @@
+[B]Version 2.4.3 - 02 Nov 2021[/B] 
+ - Fix search function prompting for keyboard input after playback
+ - Fix live playback issues
+
 2.4.2 [20200715]
  - Rewrite with six library instead of future
  - Fix playback issues
